fix filter on firefox

--- a/app/styles/app/modules/dropdown.sass
+++ b/app/styles/app/modules/dropdown.sass
@@ -40,7 +40,8 @@ $dropdown-button-margin: -9px
   .label-align
     padding: 0 1em
     overflow: hidden
-    vertical-align: baseline
+    float: left
+    line-height: 2
   .avatar
     max-width: 20px
     max-height: 20px
